Bug 386925 - toolbars are not draggable by default
Summary: toolbars are not draggable by default
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-14 22:28 UTC by uwestoehr
Modified: 2017-12-05 20:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments
toolbars in LabPlot (158.49 KB, image/jpeg)
2017-11-14 22:28 UTC, uwestoehr
Details
toolbars of LyX (Qt 5.x) (93.65 KB, image/jpeg)
2017-11-14 22:29 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-14 22:28:44 UTC
Created attachment 108869 [details]
toolbars in LabPlot

As you can see in the attached screenshot, there is plenty of space at the left and right side of my screen. Therefore I wanted to drag some toolbars to the side to view them with all their items. This is not possible.

But LabPlot is a Qt application and Qt allows this, see for example the toolbars from the program LyX.
Comment 1 uwestoehr 2017-11-14 22:29:06 UTC
Created attachment 108870 [details]
toolbars of LyX (Qt 5.x)
Comment 2 Alexander Semke 2017-11-14 22:50:12 UTC
You have to unlock the toolbars first. Do a right-click on the toolbar and uncheck "Lock toolbar positions". After this you should be able to move the toolbars around.
Comment 3 uwestoehr 2017-11-14 23:11:53 UTC
> You have to unlock the toolbars first.

But why? All programs I know have by default draggable toolbars.

I can unlock the toolbars here. So to fix this issue I propose to mack unlocking the default.
Comment 4 Alexander Semke 2017-11-15 17:59:45 UTC
Ok. I planned to improve the initial setup of the toolbars to have a better  "default look and feel" anyway. Following points are on the TODO-list at the moment:

1. move the big plot toolbar to the left hand side and place it vertically
2. show only icons for the plot toolbar, no text.  Maybe also for other toolbars.

I'll add the point "made the toolbars movable on default" to this list, too.
Comment 5 Christoph Feck 2017-11-16 01:19:47 UTC
> All programs I know have by default draggable toolbars.

Programs that use the KXMLGUI framework lock the toolbars by default to reduce the chance for accidental changes.

If the LabPlot program overrides this default, it should very likely save the status, so users can lock it, and have it locked on next start.
Comment 6 Alexander Semke 2017-12-03 13:17:39 UTC
Git commit 48fc7298cac8b694c5dd83954ec575bb8b6fcd4c by Alexander Semke.
Committed on 03/12/2017 at 13:15.
Pushed by asemke into branch 'master'.

Changed the default behaviour of the toolbars to:
1. show icons only
2. don't lock the toolbars
3. move the cartesian plot toolbar to the left toolbar area.
FIXED-IN: 2.5

M  +26   -22   src/kdefrontend/MainWin.cpp
M  +7    -10   src/kdefrontend/labplot2ui.rc

https://commits.kde.org/labplot/48fc7298cac8b694c5dd83954ec575bb8b6fcd4c
Comment 7 Alexander Semke 2017-12-03 13:20:16 UTC
This should be fixed now. To check the current default behavior you'll need to delete .config/labplot2rc file first and re-start the application.
Comment 8 uwestoehr 2017-12-05 00:34:18 UTC
> To check the current default behavior you'll need to delete .config/labplot2rc file first and re-start the application.

I cannot see any difference and can also not find a file named "labplot2rc". where is this stored?
Comment 9 Alexander Semke 2017-12-05 18:35:25 UTC
On my computer the file is located in C:\Users\<user_name>\AppData\local. In this file the application settings are stored. In order to see the new default values close the application, delete labplot2rc in this folder and restart LabPlot.
Comment 10 uwestoehr 2017-12-05 20:02:50 UTC
Thank you. I can conform now that this bug is fixed.