Changed the default behaviour of the toolbars to: 1. show icons only 2. don't lock the toolbars 3. move the cartesian plot toolbar to the left toolbar area.

BUG: 386925
FIXED-IN: 2.5